2009-10-16  Bill Holmes  <billholmes54@gmail.com>

	* libtest.vcproj : Adding TARGET_X86 and TARGET_AMD64
	  to the PreprocessorDefinitions.

	Code is contributed under MIT/X11 license.

2009-10-13  Bill Holmes  <billholmes54@gmail.com>

	* mono.def, monoposixhelper.def, libmono.vcproj, libtest.vcproj,
	  monoposixhelper.vcproj : Fixing MSVC build.

	Code is contributed under MIT/X11 license.

2009-05-04  Bill Holmes  <billholmes54@gmail.com>

	* eglib.vcproj, genmdesc.vcproj, libgc.vcproj, libmono.vcproj,
	  mono.vcproj,monoposixhelper.vcproj :  Adding TARGET_X86 and
	  TARGET_AMD64 preprocessor definitions to the Win32 and x64 targets.

	Code is contributed under MIT/X11 license.

2009-04-24  Bill Holmes  <billholmes54@gmail.com>

	Fixing the glib targets for Winx64.

	* libmono.vcproj, mono.vcproj: Correcting the ProgramDatabaseFile
	  value for the Winx64 glib build.

	* mono.sln: Enabling the glib targets for Winx64.

	Code is contributed under MIT/X11 license.

2009-04-24  Bill Holmes  <billholmes54@gmail.com>

	* libmono.vcproj: Adding metadata/metadata-verify.c to the project.

	* runmdesc.bat: Fixing the argument order to genmdesc.

	Code is contributed under MIT/X11 license.

2009-04-08  Bill Holmes  <billholmes54@gmail.com>

	* libmono.vcproj : Adding mini/mini-gc to the project.

	Code is contributed under MIT/X11 license.

2009-03-05  Bill Holmes  <billholmes54@gmail.com>

	* mono.def : Removing missing methods to remove link errors for
	  MSVC build.  

	Code is contributed under MIT/X11 license.

2009-02-18  Bill Holmes  <billholmes54@gmail.com>

	* mono.def : Adding mono_jit_set_trace_options

	Code is contributed under MIT/X11 license.

2009-02-16  Bill Holmes  <billholmes54@gmail.com>

	* libmono.vcproj : Adding metadata/cominterop and 
	  mini/dwarfwriter to the project.

	Code is contributed under MIT/X11 license.

2009-02-11  Bill Holmes  <billholmes54@gmail.com>

	* libmono.vcproj : Adding utils\mono-filemap.c to the project.
