@@ -48,7 +48,7 @@ LONG CALLBACK seh_handler(EXCEPTION_POINTERS* ep);
 #define MONO_ARCH_USE_SIGACTION
 #endif
 
-#ifndef PLATFORM_WIN32
+#ifndef HOST_WIN32
 
 #ifdef HAVE_WORKING_SIGALTSTACK
 /* 
@@ -61,7 +61,7 @@ LONG CALLBACK seh_handler(EXCEPTION_POINTERS* ep);
 #define MONO_ARCH_USE_SIGACTION
 
 #endif /* HAVE_WORKING_SIGALTSTACK */
-#endif /* !PLATFORM_WIN32 */
+#endif /* !HOST_WIN32 */
 
 #define MONO_ARCH_SUPPORT_SIMD_INTRINSICS 1
 #define MONO_ARCH_SUPPORT_TASKLETS 1
